Add push script